@@ -4,6 +4,8 @@ import java.awt.image.BufferedImage
 import java.nio.file.Files
 import java.nio.file.Path
 import javax.imageio.ImageIO
+import javax.swing.JComponent
+import javax.swing.JFrame
 import javax.swing.SwingUtilities
 
 /**
@@ -51,6 +53,38 @@ fun main(args: Array<String>) {
         println("wrote $name.png")
     }
 
+    /**
+     * Render a standalone component to a PNG, sizing the window to the panel's
+     * own preferred size — exactly what ViewerFrame.openAttachDialog does with
+     * pack(). This makes the attach-form shots match the real dialog a user
+     * sees, so the intro / banner wrapping in the image is the wrapping in the
+     * app.
+     */
+    fun dialogShot(name: String, build: () -> JComponent) {
+        var frame: JFrame? = null
+        SwingUtilities.invokeAndWait {
+            val f = JFrame(name)
+            f.contentPane = build()
+            f.pack()
+            f.isVisible = true
+            frame = f
+        }
+        Thread.sleep(500)
+        SwingUtilities.invokeAndWait {
+            val f = frame!!
+            val content = f.contentPane
+            val cw = content.width.coerceAtLeast(1)
+            val ch = content.height.coerceAtLeast(1)
+            val img = BufferedImage(cw, ch, BufferedImage.TYPE_INT_RGB)
+            val g = img.createGraphics()
+            content.printAll(g)
+            g.dispose()
+            ImageIO.write(img, "png", outDir.resolve("$name.png").toFile())
+            f.dispose()
+        }
+        println("wrote $name.png")
+    }
+
     val sample = sampleSessionDir()
 
     shot("01-empty") { /* opens with no session */ }
@@ -85,6 +119,100 @@ fun main(args: Array<String>) {
         f.selectTab("Trace")
     }
 
+    // The honest attach form. A PID and the ownership box are set so the shown
+    // command carries --i-own-this-process, but on this checkout the attach
+    // preview CLI is absent, so the form says so and keeps Run disabled — it
+    // never pretends the displayed command would run. Listen and the pre-scan
+    // still work.
+    dialogShot("07-attach-form") {
+        AttachPanel(
+            defaultOutput = "trace.jsonl",
+            onStartTail = {},
+            onClose = {},
+        ).apply {
+            applyRequest(
+                AttachRequest(
+                    pid = "48213",
+                    output = "trace.jsonl",
+                    iOwnThisProcess = true,
+                    logAll = false,
+                    mechanism = "auto",
+                    agentPath = "",
+                )
+            )
+        }
+    }
+
+    // A live tail: reduced-live-capabilities (bind only) with honest capability
+    // and gap rows, then the bind events themselves.
+    shot("08-live-tail") { f ->
+        f.startTail(resourceDir("sample-live").resolve("trace.jsonl"))
+    }
+
+    // The empty/gap case: no core capabilities, nothing usable captured — shown
+    // plainly rather than hidden.
+    shot("09-capability-gap") { f ->
+        f.startTail(resourceDir("sample-live-nocaps").resolve("trace.jsonl"))
+    }
+
+    // A first-class attach refusal: the target's argv carries
+    // -XX:+DisableAttachMechanism, so the form refuses before launch, names the
+    // reason code, gives the one-line meaning, and points at the startup path.
+    // No stealth, no bypass — reaching this banner means no attach happened.
+    dialogShot("10-attach-refused") {
+        AttachPanel(
+            defaultOutput = "trace.jsonl",
+            onStartTail = {},
+            onClose = {},
+        ).apply {
+            applyRequest(
+                AttachRequest(
+                    pid = "48213",
+                    output = "trace.jsonl",
+                    iOwnThisProcess = true,
+                    logAll = false,
+                    mechanism = "auto",
+                    agentPath = "",
+                )
+            )
+            showRefusal(AttachRefusal(AttachRefusalCode.ATTACH_DISABLED, RefusalSource.CMDLINE_SCAN))
+        }
+    }
+
+    // A non-fatal argv warning surfaced by the real pre-scan: the target sets
+    // -Djdk.attach.allowAttachSelf=false, which governs self-attach only and
+    // does NOT block this same-user attach, so the form warns (amber) and does
+    // not refuse. Same scan/classification the live refresh runs.
+    dialogShot("12-attach-self-warning") {
+        AttachPanel(
+            defaultOutput = "trace.jsonl",
+            onStartTail = {},
+            onClose = {},
+        ).apply {
+            applyRequest(
+                AttachRequest(
+                    pid = "48213",
+                    output = "trace.jsonl",
+                    iOwnThisProcess = true,
+                    logAll = false,
+                    mechanism = "auto",
+                    agentPath = "",
+                )
+            )
+            previewCmdlineScan(
+                listOf("java", "-Djdk.attach.allowAttachSelf=false", "-jar", "app.jar"),
+            )
+        }
+    }
+
+    // The analysis strip on the session viewer: binary.json shown as more than a
+    // count — container format (PE), arch, obfuscator profile + method-discovery
+    // strategy, and a binding gap (checksum left unbound) called out in amber.
+    shot("11-analysis-strip") { f ->
+        f.openDirectory(sample)
+        f.selectTab("Pipeline")
+    }
+
     println("done -> ${outDir.toAbsolutePath()}")
     // Swing keeps AWT threads alive; exit explicitly.
     System.exit(0)
@@ -107,10 +235,13 @@ private fun freshDir(name: String): Path {
  * Locate the bundled sample session. When run from test runtime the
  * resource is on the classpath; fall back to the source tree.
  */
-private fun sampleSessionDir(): Path {
-    val url = object {}.javaClass.getResource("/sample-session")
+private fun sampleSessionDir(): Path = resourceDir("sample-session")
+
+/** Locate a bundled test resource directory (classpath first, then source). */
+private fun resourceDir(name: String): Path {
+    val url = object {}.javaClass.getResource("/$name")
     if (url != null) return Path.of(url.toURI())
-    val fromSource = Path.of("src/test/resources/sample-session")
+    val fromSource = Path.of("src/test/resources/$name")
     if (Files.isDirectory(fromSource)) return fromSource
-    error("sample-session not found")
+    error("$name not found")
 }
